Incorporate final pieces of review comments

--- a/docs/guides/function-template-chemistry-workflow.ipynb
+++ b/docs/guides/function-template-chemistry-workflow.ipynb
@@ -25,7 +25,7 @@
    "id": "f3a337d1",
    "metadata": {},
    "source": [
-    "This template, developed in collaboration with the Cleveland Clinic Foundation, encapsulates a workflow to calculate the ground state energy and solvation free energy of methanol molecule in implicit solvent [1]. These simulations are based on the sample-based quantum diagonalization (SQD) method [2-6] and the integral equation formalism polarizable continuum model (IEF-PCM) of solvent [7]. Here a methanol molecule is the solute, the electronic structure of which is simulated explicitly, and the solvent is water, approximated as a continuous dielectric medium. To account for the [electron correlation effects](https://onlinelibrary.wiley.com/doi/epdf/10.1002/ijch.202100111) in methanol, while maintaining the balance between the computational cost and accuracy, we only include the $\\sigma$, $\\sigma^{*}$, and lone pair orbitals in the active space simulated with SQD IEF-PCM. This orbital selection is done with [atomic valence active space (AVAS) method](https://github.com/pyscf/pyscf.github.io/blob/master/examples/mcscf/43-avas.py) using the C[2s,2p], O[2s,2p], and H[1s] atomic orbital components, which results in the active space of 14 electrons and 12 orbitals (14e,12o). The reference orbitals are calculated with closed-shell Hartree Fock using the cc-pvdz basis set."
+    "This template, developed in collaboration with the Cleveland Clinic, encapsulates a workflow to calculate the ground state energy and solvation free energy of methanol molecule in implicit solvent [1]. These simulations are based on the sample-based quantum diagonalization (SQD) method [2-6] and the integral equation formalism polarizable continuum model (IEF-PCM) of solvent [7]. Here a methanol molecule is the solute, the electronic structure of which is simulated explicitly, and the solvent is water, approximated as a continuous dielectric medium. To account for the [electron correlation effects](https://onlinelibrary.wiley.com/doi/epdf/10.1002/ijch.202100111) in methanol, while maintaining the balance between the computational cost and accuracy, we only include the $\\sigma$, $\\sigma^{*}$, and lone pair orbitals in the active space simulated with SQD IEF-PCM. This orbital selection is done with [atomic valence active space (AVAS) method](https://github.com/pyscf/pyscf.github.io/blob/master/examples/mcscf/43-avas.py) using the C[2s,2p], O[2s,2p], and H[1s] atomic orbital components, which results in the active space of 14 electrons and 12 orbitals (14e,12o). The reference orbitals are calculated with closed-shell Hartree Fock using the cc-pvdz basis set."
    ]
   },
   {
@@ -38,7 +38,7 @@
     "\n",
     "This interactive guide shows how to upload this function template to Qiskit Serverless and run an example workload. The template is structured as a Qiskit pattern with four steps:\n",
     "\n",
-    "1. Collecting input and mapping the problem\n",
+    "#### 1. Collecting input and mapping the problem\n",
     "\n",
     "This step takes as an input the geometry of the molecule, selected active space, solvation model, LUCJ options, and SQD options. Subsequently, it produces the PySCF Checkpoint file which contains the Hartree-Fock (HF) IEF-PCM data. This data will be used in the SQD portion of the workflow. For LUCJ portion of the workflow the input section also generates the gas-phase HF data which is stored internally in PySCF FCIDUMP format.\n",
     "\n",
@@ -47,11 +47,11 @@
     "It generates one-electron and two-electron integrals within the defined active space. The integrals are then used to perform classical CCSD calculations, which give us t2 amplitudes that we use for parametrization of the LUCJ circuit.\n",
     "\n",
     "\n",
-    "3. Executing the circuit\n",
+    "#### 3. Executing the circuit\n",
     "\n",
     "The LUCJ calculations return the bitstrings for each measurement, where these bitstrings correspond to electron configurations of the studied system. The bitstrings will then be used as input for post-processing using the SQD addon.\n",
     "\n",
-    "3. Post-processing using SQD\n",
+    "#### 3. Post-processing using SQD\n",
     "\n",
     "This final step takes as the input the PySCF Checkpoint file containing the HF IEF-PCM information, the bitstrings representing the electron configurations predicted by LUCJ, as well as the user-defined SQD options selected in the input section. As an output it produces the SQD IEF-PCM total energy of the lowest energy batch as well as the corresponding solvation free energy."
    ]
@@ -61,7 +61,11 @@
    "id": "4832ef18",
    "metadata": {},
    "source": [
-    "### LUCJ options\n",
+    "### Options\n",
+    "\n",
+    "The template requires that a number of options be specified for generating the LUCJ circuit along with SQD run parameters.\n",
+    "\n",
+    "#### LUCJ options\n",
     "\n",
     "Execution of the LUCJ quantum circuit produces a set of samples representing the computational basis states from the probability distribution of the molecular system. To achieve the balance between the depth of the LUCJ circuit and its expressibility, the qubits corresponding to the spin orbitals with the opposite spin have the two-qubit gates applied between them only in instances when these qubits are neighboring each other through single ancilla qubit. To implement this approach on IBM hardware with a heavy-hex topology, qubits representing the spin orbitals with the same spin are connected through a line topology where each line take a zig-zag shape due the heavy-hex connectivity of the target hardware, while the qubits representing the spin orbitals with the opposite spin only have a connection at every 4th qubit.\n",
     "\n",
@@ -88,7 +92,7 @@
    "id": "e2b46498",
    "metadata": {},
    "source": [
-    "### SQD options\n",
+    "#### SQD options\n",
     "\n",
     "Important options in SQD simulations include the `sqd_iterations`, `number_of_batches`, and `samples_per_batch`. Generally, the lower number of samples per batch can be counteracted with more batches (`number_of_batches`) and more iterations of S-CORE (`sqd_iterations`). More batches means we can sample more variations of the configurational subspaces. Since the lowest-energy batch is taken as the solution for the ground state energy of the system, a higher number of batches can improve the results through better statistics. Additional iterations of S-CORE allows more configurations to be recovered from original LUCJ distribution if the number of samples in correct particle sector is low. This can allow the number of samples per batch to be reduced.\n",
     "\n",
@@ -132,13 +136,13 @@
     "\n",
     "```python\n",
     "from qiskit_ibm_catalog import QiskitServerless\n",
-    "serverless = QiskitServerless(token=\"MY_TOKEN\", channel=\"ibm_cloud\", instance=\"INSTANCE_CRN\")\n",
+    "serverless = QiskitServerless(token=\"MY_API_TOKEN\", channel=\"ibm_cloud\", instance=\"INSTANCE_CRN\")\n",
     "```\n",
     "\n",
     "Optionally, use `save_account()` to save your credentials in a local environment (see the [Set up your IBM Cloud account](/docs/guides/cloud-setup#cloud-save) guide). Note that this writes your credentials to the same file as [`QiskitRuntimeService.save_account()`](/docs/api/qiskit-ibm-runtime/qiskit-runtime-service#save_account):\n",
     "\n",
     "```python\n",
-    "QiskitServerless.save_account(token=\"MY_TOKEN\")\n",
+    "QiskitServerless.save_account(token=\"MY_API_TOKEN\", channel=\"ibm_cloud\", instance=\"INSTANCE_CRN\")\n",
     "```\n",
     "\n",
     "If the account is saved, there is no need to provide the token to authenticate:"
@@ -665,10 +669,25 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d7cc1cb2",
+   "metadata": {},
+   "source": [
+    "## Next steps\n",
+    "\n",
+    "<Admonition type=\"info\" title=\"Recommendations\">\n",
+    "\n",
+    "- Review the guide on building a function template for [Hamiltonian simulation](./function-template-hamiltonian-simulation)\n",
+    "- Check out the source files for this template on [GitHub](https://github.com/qiskit-community/qiskit-function-templates/tree/main/chemistry/sqd_pcm)\n",
+    "\n",
+    "</Admonition>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "aabba015",
    "metadata": {},
    "source": [
-    "# References\n",
+    "#### References\n",
     "\n",
     "[1] Danil Kaliakin, Akhil Shajan, Fangchun Liang, and Kenneth M. Merz Jr. [Implicit Solvent Sample-Based Quantum Diagonalization](https://pubs.acs.org/doi/10.1021/acs.jpcb.5c01030), The Journal of Physical Chemistry B, 2025, DOI: 10.1021/acs.jpcb.5c01030\n",
     "\n",
@@ -720,7 +739,7 @@
     "\n",
     "# This code is part of a Qiskit project.\n",
     "#\n",
-    "# (C) Copyright IBM and Cleveland Clinic Foundation 2025\n",
+    "# (C) Copyright IBM and Cleveland Clinic 2025\n",
     "#\n",
     "# This code is licensed under the Apache License, Version 2.0. You may\n",
     "# obtain a copy of this license in the LICENSE.txt file in the root directory\n",
@@ -1085,7 +1104,7 @@
     "\n",
     "# This code is part of a Qiskit project.\n",
     "#\n",
-    "# (C) Copyright IBM and Cleveland Clinic Foundation 2025\n",
+    "# (C) Copyright IBM and Cleveland Clinic 2025\n",
     "#\n",
     "# This code is licensed under the Apache License, Version 2.0. You may\n",
     "# obtain a copy of this license in the LICENSE.txt file in the root directory\n",
