--- a/docs/guides/qiskit-function-templates.mdx
+++ b/docs/guides/qiskit-function-templates.mdx
@@ -34,6 +34,7 @@ There are currently two templates, a [circuit function template](https://github.
 <Admonition type="info" title="Recommendations">
 
 - Review the guide on building a function template for [Hamiltonian simulation](./function-template-hamiltonian-simulation)
+- Read through the guide on deploying the function template for a [chemistry workflow](./function-template-chemistry-workflow)
 - Check out the [Qiskit Function templates repository](https://github.com/qiskit-community/qiskit-function-templates) on GitHub.
 
 </Admonition>
