--- a/learning/modules/quantum-mechanics/superposition-with-qiskit.ipynb
+++ b/learning/modules/quantum-mechanics/superposition-with-qiskit.ipynb
@@ -22,7 +22,9 @@
     "- `qiskit.visualization`\n",
     "\n",
     "To set up and install the packages above, see the [Install Qiskit](/docs/guides/install-qiskit) guide.\n",
-    "In order to run jobs on real quantum computers, students will need to set up an account with IBM Quantum&reg; by following the steps in the [Set up your IBM Cloud account](/docs/guides/cloud-setup) guide."
+    "In order to run jobs on real quantum computers, students will need to set up an account with IBM Quantum&reg; by following the steps in the [Set up your IBM Cloud account](/docs/guides/cloud-setup) guide.\n",
+    "\n",
+    "This module was tested and used 47 sec. of QPU time. This is a good-faith estimate; your actual usage may vary."
    ]
   },
   {
@@ -1198,7 +1200,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3"
+   "version": "3.11.12"
   },
   "title": "Superposition with Qiskit",
   "widgets": {
