--- a/docs/tutorials/edc-cut-bell-pair-benchmarking.ipynb
+++ b/docs/tutorials/edc-cut-bell-pair-benchmarking.ipynb
@@ -569,7 +569,7 @@
     "## Step 4: Post-process and return result in the desired classical format\n",
     "\n",
     "\n",
-    "The final step is to compute the mean squared error metric (MSE) for each tested qubit group and summarize the results. For each chain, we now have the measured $\\langle Z_0Z_3\\rangle$ and $\\langle X_0X_3\\rangle$. If the qubits 0 and 3 were perfectly entangled in a $|\\Phi^+\\rangle$ Bell state, we would expect both of these to be +1. We quantify the deviation using the MSE:\n",
+    "The final step is to compute the mean squared error metric (MSE) for each tested qubit group and summarize the results. For each chain, we now have the measured $\\langle Z_0Z_3\\rangle$ and $\\langle X_0X_3\\rangle$. If qubits 0 and 3 were perfectly entangled in a $|\\Phi^+\\rangle$ Bell state, we would expect both of these to be +1. We quantify the deviation using the MSE:\n",
     "\n",
     "$$\\text{MSE} = \\frac{( \\langle Z_0Z_3\\rangle - 1)^2 + (\\langle X_0X_3\\rangle - 1)^2}{2}.$$\n",
     "\n",
