--- a/docs/tutorials/edc-cut-bell-pair-benchmarking.ipynb
+++ b/docs/tutorials/edc-cut-bell-pair-benchmarking.ipynb
@@ -324,7 +324,7 @@
     "            label=f\"qubits: {sorted(list(set(all_initial_layout)))}\",\n",
     "        )\n",
     "\n",
-    "        # add qubits labels for the edge pairs\n",
+    "        # add qubit labels for the edge pairs\n",
     "        for xi, yi, q in zip(x[1:], y[1:], layout_list):\n",
     "            plt.annotate(\n",
     "                [q[0], q[3]],\n",
