--- a/docs/faq.mdx
+++ b/docs/faq.mdx
@@ -60,6 +60,14 @@ Try choosing a different account from the account switcher in the header of the 
 You will not be charged unless you create a Standard Plan [instance](/docs/guides/instances) and use it to send workloads to QPUs. See [Manage cost on the Standard Plan](/docs/guides/manage-cost) for instructions to set a cost limit and to learn about other ways to manage costs.
 
 
+## What's the difference between an API key and an API token?
+
+There's no difference.  The terms API key and API token are used interchangeably. You'll see both terms in the documentation because different interfaces use different terms.
+
+## Do I have to choose the region that I live in?
+
+No. You can use either region.  The region determines where jobs are run and where the data is kept.  Additionally, you can only see and use instances that were created in the instance that you are logged in to. Note that only the us-east region supports the Open Plan.
+
 ## What happened to Python distributions such as Qiskit Aer, Qiskit Nature, and Qiskit Experiments?
 
 Since the release of the Qiskit SDK v1.0, the command `pip install qiskit` will **only** install the [Qiskit SDK](https://github.com/Qiskit/qiskit). This means that some modules that you have used in the past, such as `qiskit-aer` or `qiskit-nature`, now have to be installed separately.
