--- a/docs/guides/cloud-setup-rest-api.mdx
+++ b/docs/guides/cloud-setup-rest-api.mdx
@@ -13,7 +13,7 @@ You can access quantum processors with REST APIs, enabling you to work with QPUs
 ### 1. Get access
 
 1. If you do not already have a user account, get one at the [IBM Quantum login page.](https://quantum.cloud.ibm.com/login)
-1. Create an API key on the [dashboard.](https://quantum.cloud.ibm.com) Note that the same API key can be used for either region.
+1. Create an API key (also called a token) on the [dashboard.](https://quantum.cloud.ibm.com) Note that the same API key can be used for either region.
 1. Generate an IBM Cloud Identity and Access Management (IAM) bearer token. This is a short-lived token  used to authenticate requests to the REST API. To generate one, call the [IAM Identity Services API](https://cloud.ibm.com/apidocs/iam-identity-token-api#create-api-key) as shown in the following sample request:
 <Tabs>
 
