--- a/docs/guides/cloud-setup.mdx
+++ b/docs/guides/cloud-setup.mdx
@@ -31,7 +31,7 @@ If you do not already have one, set up an [IBM Cloud account.](https://quantum.c
 
     Go to the [IBM Quantum Platform dashboard.](https://quantum.cloud.ibm.com) If you have one or more instances shown, skip this step. Otherwise, follow these steps to create an instance.
 
-    1. Make sure that you have the correct account and region are selected from the account and region switchers in the header.
+    1. Make sure that you have the correct account and region are selected from the account and region switchers in the header. If you want to create an Open instance, you must choose the us-east region.
 
         The region controls where your jobs are run and where the job data is kept. You can access either region by using the same API key, but you can only see and access the instances that were created in the region that you're logged in to.
     1. Click **Create instance**.
