Add more info about account and region switcher

--- a/docs/guides/cloud-setup.mdx
+++ b/docs/guides/cloud-setup.mdx
@@ -31,9 +31,13 @@ If you do not already have one, set up an [IBM Cloud account.](https://quantum.c
 
     Go to the [IBM Quantum Platform dashboard.](https://quantum.cloud.ibm.com) If you have one or more instances shown, skip this step. Otherwise, follow these steps to create an instance.
 
-    1. Make sure that you have the correct account and region are selected from the account and region switchers in the header. If you want to create an Open instance, you must choose the us-east region.
+    1. Make sure that the correct account and region are selected from the account and region switchers in the header, as shown in the following image.
+        * You can have multiple accounts.  If you don't see the instances or jobs you're expecting, try a different account.
+        * The region controls where your jobs are run and where the job data is kept. You can access either region by using the same API key, but you can only see and access the instances that were created in the region that you're logged in to.
+        * If you want to create an Open instance, you must choose the us-east region.
 
-        The region controls where your jobs are run and where the job data is kept. You can access either region by using the same API key, but you can only see and access the instances that were created in the region that you're logged in to.
+        ![The IBM Quantum Platform header is shown.  The account switcher is to the right of the search bar.  The region switcher is to the right of the account switcher.](/docs/images/guides/cloud-setup/IQP-Header.svg 'Cloud account structure')
+
     1. Click **Create instance**.
          * Choose a name and the plan to use.
          * If you are creating an instance of the Standard Plan, it is recommended that you set the total cost limit or the usage limit. (These values can be updated later.)
