--- a/docs/guides/cloud-setup-invited.mdx
+++ b/docs/guides/cloud-setup-invited.mdx
@@ -27,8 +27,12 @@ Your user account is associated with one or more [instances](./instances), ident
 1. Accept the email invitation.
 1. Log in with an IBMid or Google account.  If you don't have one, you are guided through creating one. After logging in, confirm your information and accept the invitation to join the account.
 1. Navigate back to [IBM Quantum Platform.](https://quantum.cloud.ibm.com)
-1. Make sure that the correct account is selected in the account switcher in the header.  This should be the account that was invited in the email.
-1. Make sure that the correct region is selected in the region switcher in the header. The region controls where your jobs are run and where the job data is kept. You can access either region by using the same API key, but you can only see and access the instances that were created in the region that you're logged in to.
+1. Make sure that the correct account and region are selected in the account switcher in the header, as shown in the following image.
+    * Choose the account that was invited in the email.
+    * The region controls where your jobs are run and where the job data is kept. You can access either region by using the same API key, but you can only see and access the instances that were created in the region that you're logged in to.
+
+    ![The IBM Quantum Platform header is shown.  The account switcher is to the right of the search bar.  The region switcher is to the right of the account switcher.](/docs/images/guides/cloud-setup/IQP-Header.svg 'Cloud account structure')
+
 
 <span id="access-credentials"></span>
 ### 1. Find your access credentials
