--- a/docs/guides/cloud-setup.mdx
+++ b/docs/guides/cloud-setup.mdx
@@ -31,6 +31,7 @@ If you do not already have one, set up an [IBM Cloud account.](https://quantum.c
 
     Go to the [IBM Quantum Platform dashboard.](https://quantum.cloud.ibm.com) If you have one or more instances shown, skip this step. Otherwise, follow these steps to create an instance.
 
+    <span id="switcher"></span>
     1. Make sure that the correct account and region are selected from the account and region switchers in the header, as shown in the following image.
         * You can have multiple accounts.  If you don't see the instances or jobs you're expecting, try a different account.
         * The region controls where your jobs are run and where the job data is kept. You can access either region by using the same API key, but you can only see and access the instances that were created in the region that you're logged in to.
