Fix KQD typo (#3524)
Closes #3483

--- a/learning/courses/quantum-diagonalization-algorithms/krylov.ipynb
+++ b/learning/courses/quantum-diagonalization-algorithms/krylov.ipynb
@@ -457,7 +457,7 @@
     "$$\n",
     "we see that\n",
     "$$\n",
-    "\\text{span} \\{|R_0\\rangle,|R_1\\rangle,…,|R_k\\rangle \\}=\\text{span} \\{|R_0\\rangle,A|R_0\\rangle,…,A^{k−1}|R_0\\rangle \\}.\n",
+    "\\text{span} \\{|R_0\\rangle,|R_1\\rangle,…,|R_k\\rangle \\}=\\text{span} \\{|R_0\\rangle,A|R_0\\rangle,…,A^{k}|R_0\\rangle \\}.\n",
     "$$\n",
     "That is, the space we build up that most efficiently approximates the correct solution $|x\\rangle$ is exactly the space built up by successive operation of the matrix $A$ on $|R_0\\rangle.$ A Krylov subspace _is_ the space spanned by the vectors of successive directions of steepest descent.\n",
     "\n",
