Add PDFs back to John Watrous's courses (#3502)
Added pdfs back into John Watrous's courses.
Fixes #3469 and its duplicates.

--- a/learning/courses/general-formulation-of-quantum-information/purifications-and-fidelity/introduction.ipynb
+++ b/learning/courses/general-formulation-of-quantum-information/purifications-and-fidelity/introduction.ipynb
@@ -24,7 +24,7 @@
     "\n",
     "## Lesson video\n",
     "\n",
-    "In the following video, John Watrous steps you through the content in this lesson on purification and fidelity. Alternatively, you can open the [YouTube video](https://www.youtube.com/watch?v=jemWEdnJTnI&list=PLOFEBzvs-VvqKKMXX4vbi4EB1uaErFMSO&index=14) for this lesson in a separate window.\n",
+    "In the following video, John Watrous steps you through the content in this lesson on purification and fidelity. Alternatively, you can open the [YouTube video](https://www.youtube.com/watch?v=jemWEdnJTnI&list=PLOFEBzvs-VvqKKMXX4vbi4EB1uaErFMSO&index=14) for this lesson in a separate window. [Download the slides](https://ibm.box.com/shared/static/wt8dkrbjdft267ouym92rg53cimodr4c.pdf) for this lesson.\n",
     "\n",
     "<IBMVideo id=\"134063424\" title=\"In this video, John Watrous discusses purification of a quantum state and a state's fidelity.\"/>"
    ]
