--- a/docs/security/secure-data.mdx
+++ b/docs/security/secure-data.mdx
@@ -15,3 +15,7 @@ The data that you store in IBM Cloud&reg; is encrypted at rest by using a random
 ## Deleting your data
 
 Deleting a service instance removes all of the content associated with that instance, such as your jobs, results, parameters, and programs. To delete an instance, from the [Instances page,](https://quantum.cloud.ibm.com/instances) find the instance you want to remove, click its overflow menu, then click **Delete**. You will be asked to confirm the deletion.
+
+## Data retention policy
+
+While you continue to use the Qiskit Runtime service, IBM will retain your data for three years. See the [Qiskit Runtime service description](https://www.ibm.com/support/customer/csol/terms/?id=BB6EE1D06BDE11EBA199CCFE56FA6D9D) for information about data retention after you stop using the service.
